--- a/table.ipynb
+++ b/table.ipynb
@@ -32,6 +32,404 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>task</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">inpainting box</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">inpainting random</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">motion deblur</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">super resolution</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>LPIPS</th>\n",
+       "      <th>PSNR</th>\n",
+       "      <th>SSIM</th>\n",
+       "      <th>LPIPS</th>\n",
+       "      <th>PSNR</th>\n",
+       "      <th>SSIM</th>\n",
+       "      <th>LPIPS</th>\n",
+       "      <th>PSNR</th>\n",
+       "      <th>SSIM</th>\n",
+       "      <th>LPIPS</th>\n",
+       "      <th>PSNR</th>\n",
+       "      <th>SSIM</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>method</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>DIFFPIR 0010</th>\n",
+       "      <td>0.97</td>\n",
+       "      <td>14.23</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>10.97</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>23.98</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>26.45</td>\n",
+       "      <td>0.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DIFFPIR 0100</th>\n",
+       "      <td>0.88</td>\n",
+       "      <td>15.03</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>10.26</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>25.17</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>26.30</td>\n",
+       "      <td>0.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DIFFPIR 1000</th>\n",
+       "      <td>0.90</td>\n",
+       "      <td>14.65</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>9.51</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>24.67</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>25.67</td>\n",
+       "      <td>0.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DPS 0010</th>\n",
+       "      <td>0.64</td>\n",
+       "      <td>10.41</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>12.68</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>8.63</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>12.01</td>\n",
+       "      <td>0.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DPS 0100</th>\n",
+       "      <td>0.38</td>\n",
+       "      <td>16.82</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>16.66</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>19.75</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>18.29</td>\n",
+       "      <td>0.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DPS 1000</th>\n",
+       "      <td>0.22</td>\n",
+       "      <td>21.02</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>21.90</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>22.91</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>25.02</td>\n",
+       "      <td>0.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MMPS 0010 01</th>\n",
+       "      <td>0.27</td>\n",
+       "      <td>21.19</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>22.41</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>22.12</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>26.94</td>\n",
+       "      <td>0.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MMPS 0010 05</th>\n",
+       "      <td>0.23</td>\n",
+       "      <td>21.73</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>23.72</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>26.70</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>28.02</td>\n",
+       "      <td>0.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MMPS 0100 01</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>21.19</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>22.18</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>23.92</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>27.32</td>\n",
+       "      <td>0.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MMPS 0100 05</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>21.30</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>22.82</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>26.70</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>27.12</td>\n",
+       "      <td>0.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MMPS 1000 01</th>\n",
+       "      <td>0.19</td>\n",
+       "      <td>20.77</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>21.94</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>23.83</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>26.92</td>\n",
+       "      <td>0.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MMPS 1000 05</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>20.98</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>22.52</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>26.18</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>26.60</td>\n",
+       "      <td>0.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PGDM 0010</th>\n",
+       "      <td>0.48</td>\n",
+       "      <td>15.32</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>14.44</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>18.61</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>20.47</td>\n",
+       "      <td>0.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PGDM 0100</th>\n",
+       "      <td>0.92</td>\n",
+       "      <td>14.18</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>21.59</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>17.02</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>21.80</td>\n",
+       "      <td>0.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PGDM 1000</th>\n",
+       "      <td>0.83</td>\n",
+       "      <td>14.38</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>22.47</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>16.63</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>20.88</td>\n",
+       "      <td>0.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TMPD 0010</th>\n",
+       "      <td>0.36</td>\n",
+       "      <td>19.90</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>11.08</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>25.28</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>26.07</td>\n",
+       "      <td>0.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TMPD 0100</th>\n",
+       "      <td>0.27</td>\n",
+       "      <td>19.86</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>10.73</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>26.22</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>26.79</td>\n",
+       "      <td>0.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TMPD 1000</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>19.53</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>9.98</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>25.91</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>26.53</td>\n",
+       "      <td>0.76</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "task         inpainting box              inpainting random               \\\n",
+       "                      LPIPS   PSNR  SSIM             LPIPS   PSNR  SSIM   \n",
+       "method                                                                    \n",
+       "DIFFPIR 0010           0.97  14.23  0.13              0.78  10.97  0.32   \n",
+       "DIFFPIR 0100           0.88  15.03  0.20              0.68  10.26  0.25   \n",
+       "DIFFPIR 1000           0.90  14.65  0.18              0.74   9.51  0.21   \n",
+       "DPS 0010               0.64  10.41  0.34              0.58  12.68  0.43   \n",
+       "DPS 0100               0.38  16.82  0.50              0.39  16.66  0.49   \n",
+       "DPS 1000               0.22  21.02  0.64              0.19  21.90  0.66   \n",
+       "MMPS 0010 01           0.27  21.19  0.68              0.26  22.41  0.69   \n",
+       "MMPS 0010 05           0.23  21.73  0.69              0.20  23.72  0.75   \n",
+       "MMPS 0100 01           0.20  21.19  0.67              0.18  22.18  0.69   \n",
+       "MMPS 0100 05           0.20  21.30  0.67              0.15  22.82  0.72   \n",
+       "MMPS 1000 01           0.19  20.77  0.64              0.18  21.94  0.66   \n",
+       "MMPS 1000 05           0.20  20.98  0.64              0.14  22.52  0.69   \n",
+       "PGDM 0010              0.48  15.32  0.57              0.52  14.44  0.47   \n",
+       "PGDM 0100              0.92  14.18  0.22              0.23  21.59  0.66   \n",
+       "PGDM 1000              0.83  14.38  0.34              0.14  22.47  0.70   \n",
+       "TMPD 0010              0.36  19.90  0.64              0.59  11.08  0.40   \n",
+       "TMPD 0100              0.27  19.86  0.64              0.58  10.73  0.31   \n",
+       "TMPD 1000              0.25  19.53  0.62              0.68   9.98  0.25   \n",
+       "\n",
+       "task         motion deblur              super resolution               \n",
+       "                     LPIPS   PSNR  SSIM            LPIPS   PSNR  SSIM  \n",
+       "method                                                                 \n",
+       "DIFFPIR 0010          0.39  23.98  0.51             0.31  26.45  0.69  \n",
+       "DIFFPIR 0100          0.17  25.17  0.71             0.19  26.30  0.73  \n",
+       "DIFFPIR 1000          0.17  24.67  0.68             0.19  25.67  0.68  \n",
+       "DPS 0010              0.75   8.63  0.27             0.58  12.01  0.41  \n",
+       "DPS 0100              0.29  19.75  0.57             0.35  18.29  0.54  \n",
+       "DPS 1000              0.18  22.91  0.66             0.16  25.02  0.72  \n",
+       "MMPS 0010 01          0.33  22.12  0.66             0.24  26.94  0.78  \n",
+       "MMPS 0010 05          0.20  26.70  0.78             0.18  28.02  0.81  \n",
+       "MMPS 0100 01          0.20  23.92  0.71             0.15  27.32  0.79  \n",
+       "MMPS 0100 05          0.13  26.70  0.77             0.13  27.12  0.78  \n",
+       "MMPS 1000 01          0.16  23.83  0.69             0.12  26.92  0.77  \n",
+       "MMPS 1000 05          0.11  26.18  0.75             0.11  26.60  0.76  \n",
+       "PGDM 0010             0.46  18.61  0.54             0.37  20.47  0.67  \n",
+       "PGDM 0100             0.84  17.02  0.34             0.45  21.80  0.51  \n",
+       "PGDM 1000             0.88  16.63  0.34             0.51  20.88  0.48  \n",
+       "TMPD 0010             0.27  25.28  0.74             0.26  26.07  0.76  \n",
+       "TMPD 0100             0.17  26.22  0.76             0.17  26.79  0.77  \n",
+       "TMPD 1000             0.14  25.91  0.74             0.14  26.53  0.76  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean = df.groupby([\"task\", \"method\"]).mean().reset_index().round(2)\n",
+    "mean = mean.pivot(index=\"method\", columns=\"task\", values=[\"PSNR\", \"SSIM\", \"LPIPS\"])\n",
+    "mean.swaplevel(0, 1, axis=1).sort_index(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -41,16 +439,24 @@
       " & LPIPS & PSNR & SSIM & LPIPS & PSNR & SSIM & LPIPS & PSNR & SSIM & LPIPS & PSNR & SSIM \\\\\n",
       "method &  &  &  &  &  &  &  &  &  &  &  &  \\\\\n",
       "\\midrule\n",
-      "DPS 0100 & 0.38 & 16.97 & 0.51 & 0.39 & 16.84 & 0.50 & 0.30 & 19.84 & 0.58 & 0.35 & 18.40 & 0.55 \\\\\n",
-      "DPS 1000 & 0.22 & 21.26 & 0.65 & 0.20 & 21.92 & 0.66 & 0.17 & 22.96 & 0.66 & 0.16 & 25.06 & 0.72 \\\\\n",
-      "MMPS 0100 01 & \\textbf{0.19} & \\underline{21.57} & \\textbf{0.68} & 0.19 & 22.20 & 0.69 & 0.20 & 24.00 & 0.71 & 0.15 & \\textbf{27.32} & \\textbf{0.79} \\\\\n",
-      "MMPS 0100 05 & \\underline{0.20} & \\textbf{21.65} & \\underline{0.67} & \\underline{0.15} & \\textbf{22.89} & \\textbf{0.72} & \\underline{0.13} & \\textbf{26.74} & \\textbf{0.77} & 0.13 & \\underline{27.11} & \\underline{0.78} \\\\\n",
-      "MMPS 1000 01 & \\textbf{0.19} & 21.11 & 0.65 & 0.18 & 21.96 & 0.66 & 0.16 & 23.93 & 0.70 & \\underline{0.12} & 26.97 & 0.77 \\\\\n",
-      "MMPS 1000 05 & \\underline{0.20} & 21.30 & 0.65 & \\textbf{0.14} & \\underline{22.55} & 0.69 & \\textbf{0.11} & \\underline{26.26} & 0.75 & \\textbf{0.11} & 26.65 & 0.76 \\\\\n",
-      "PGDM 0100 & 0.92 & 14.19 & 0.22 & 0.23 & 21.59 & 0.66 & 0.79 & 17.67 & 0.37 & 0.43 & 22.17 & 0.53 \\\\\n",
-      "PGDM 1000 & 0.88 & 13.89 & 0.31 & \\textbf{0.14} & 22.50 & \\underline{0.70} & 0.91 & 16.24 & 0.32 & 0.50 & 21.10 & 0.49 \\\\\n",
-      "TMPD 0100 & 0.27 & 20.17 & 0.65 & 0.59 & 10.96 & 0.31 & 0.17 & 26.25 & \\underline{0.76} & 0.17 & 26.77 & 0.77 \\\\\n",
-      "TMPD 1000 & 0.25 & 19.79 & 0.62 & 0.66 & 10.30 & 0.25 & \\underline{0.13} & 26.00 & 0.75 & 0.14 & 26.58 & 0.76 \\\\\n",
+      "DIFFPIR 0010 & 0.97 & 14.23 & 0.13 & 0.78 & 10.97 & 0.32 & 0.39 & 23.98 & 0.51 & 0.31 & 26.45 & 0.69 \\\\\n",
+      "DIFFPIR 0100 & 0.88 & 15.03 & 0.20 & 0.68 & 10.26 & 0.25 & 0.17 & 25.17 & 0.71 & 0.19 & 26.30 & 0.73 \\\\\n",
+      "DIFFPIR 1000 & 0.90 & 14.65 & 0.18 & 0.74 & 9.51 & 0.21 & 0.17 & 24.67 & 0.68 & 0.19 & 25.67 & 0.68 \\\\\n",
+      "DPS 0010 & 0.64 & 10.41 & 0.34 & 0.58 & 12.68 & 0.43 & 0.75 & 8.63 & 0.27 & 0.58 & 12.01 & 0.41 \\\\\n",
+      "DPS 0100 & 0.38 & 16.82 & 0.50 & 0.39 & 16.66 & 0.49 & 0.29 & 19.75 & 0.57 & 0.35 & 18.29 & 0.54 \\\\\n",
+      "DPS 1000 & 0.22 & 21.02 & 0.64 & 0.19 & 21.90 & 0.66 & 0.18 & 22.91 & 0.66 & 0.16 & 25.02 & 0.72 \\\\\n",
+      "MMPS 0010 01 & 0.27 & 21.19 & \\underline{0.68} & 0.26 & 22.41 & 0.69 & 0.33 & 22.12 & 0.66 & 0.24 & 26.94 & 0.78 \\\\\n",
+      "MMPS 0010 05 & 0.23 & \\textbf{21.73} & \\textbf{0.69} & 0.20 & \\textbf{23.72} & \\textbf{0.75} & 0.20 & \\textbf{26.70} & \\textbf{0.78} & 0.18 & \\textbf{28.02} & \\textbf{0.81} \\\\\n",
+      "MMPS 0100 01 & \\underline{0.20} & 21.19 & 0.67 & 0.18 & 22.18 & 0.69 & 0.20 & 23.92 & 0.71 & 0.15 & \\underline{27.32} & \\underline{0.79} \\\\\n",
+      "MMPS 0100 05 & \\underline{0.20} & \\underline{21.30} & 0.67 & \\underline{0.15} & \\underline{22.82} & \\underline{0.72} & \\underline{0.13} & \\textbf{26.70} & \\underline{0.77} & 0.13 & 27.12 & 0.78 \\\\\n",
+      "MMPS 1000 01 & \\textbf{0.19} & 20.77 & 0.64 & 0.18 & 21.94 & 0.66 & 0.16 & 23.83 & 0.69 & \\underline{0.12} & 26.92 & 0.77 \\\\\n",
+      "MMPS 1000 05 & \\underline{0.20} & 20.98 & 0.64 & \\textbf{0.14} & 22.52 & 0.69 & \\textbf{0.11} & 26.18 & 0.75 & \\textbf{0.11} & 26.60 & 0.76 \\\\\n",
+      "PGDM 0010 & 0.48 & 15.32 & 0.57 & 0.52 & 14.44 & 0.47 & 0.46 & 18.61 & 0.54 & 0.37 & 20.47 & 0.67 \\\\\n",
+      "PGDM 0100 & 0.92 & 14.18 & 0.22 & 0.23 & 21.59 & 0.66 & 0.84 & 17.02 & 0.34 & 0.45 & 21.80 & 0.51 \\\\\n",
+      "PGDM 1000 & 0.83 & 14.38 & 0.34 & \\textbf{0.14} & 22.47 & 0.70 & 0.88 & 16.63 & 0.34 & 0.51 & 20.88 & 0.48 \\\\\n",
+      "TMPD 0010 & 0.36 & 19.90 & 0.64 & 0.59 & 11.08 & 0.40 & 0.27 & 25.28 & 0.74 & 0.26 & 26.07 & 0.76 \\\\\n",
+      "TMPD 0100 & 0.27 & 19.86 & 0.64 & 0.58 & 10.73 & 0.31 & 0.17 & \\underline{26.22} & 0.76 & 0.17 & 26.79 & 0.77 \\\\\n",
+      "TMPD 1000 & 0.25 & 19.53 & 0.62 & 0.68 & 9.98 & 0.25 & 0.14 & 25.91 & 0.74 & 0.14 & 26.53 & 0.76 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -58,9 +464,6 @@
     }
    ],
    "source": [
-    "mean = df.groupby([\"task\", \"method\"]).mean().reset_index().round(2)\n",
-    "mean = mean.pivot(index=\"method\", columns=\"task\", values=[\"PSNR\", \"SSIM\", \"LPIPS\"])\n",
-    "\n",
     "rank = mean.rank(method=\"dense\", ascending=False)\n",
     "rank[\"LPIPS\"] = mean[\"LPIPS\"].rank(method=\"dense\")\n",
     "\n",
@@ -92,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
